k8s/clusters/homelabk8s01/apps/arr/seerr/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arr-seerr
  namespace: arr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: default
      sectionName: https
  hostnames:
    - seerr.homelab.local
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: arr-seerr
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
